--- a/examples/v2/internal_lb_haproxy/config.yaml
+++ b/examples/v2/internal_lb_haproxy/config.yaml
@@ -24,4 +24,4 @@ resources:
     - https://www.googleapis.com/compute/v1/projects/YOUR_PROJECT/zones/ZONE2/instanceGroups/GROUP_NAME2
     app-port: 8080
     port: 8080
-    zone: ZONE_TO_RUN
+    zone: us-central1-a
